# noise

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.MD
app/: CMakeLists.txt  app.cpp
include/: bitmap.h  configuration.h  file.h  utilities.h  version.h.in
src/: CMakeLists.txt  bitmap.cpp  bitmap.h  blob.h  configuration.cpp  configuration.h  encoder.cpp  encoder.h  file.cpp  file.h  log.cpp  log.h  main.cpp  parser.cpp  parser.h  transcoder.cpp  transcoder.h  utilities.cpp  utilities.h
